src/mobius.atp/mobius.cvc3/cvc3-20090730/src/parser/parsesmtlib.output
Grammar

    0 $accept: cmd $end

    1 cmd: benchmark

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name bench_attributes RPAREN_TOK
    3          | EOF_TOK

    4 bench_name: SYM_TOK

    5 bench_attributes: bench_attribute
    6                 | bench_attributes bench_attribute

    7 bench_attribute: COLON_TOK ASSUMPTION_TOK an_formula
    8                | COLON_TOK FORMULA_TOK an_formula
    9                | COLON_TOK STATUS_TOK status
   10                | COLON_TOK LOGIC_TOK logic_name
   11                | COLON_TOK EXTRASORTS_TOK LPAREN_TOK sort_symbs RPAREN_TOK
   12                | COLON_TOK EXTRAFUNS_TOK LPAREN_TOK fun_symb_decls RPAREN_TOK
   13                | COLON_TOK EXTRAPREDS_TOK LPAREN_TOK pred_symb_decls RPAREN_TOK
   14                | COLON_TOK NOTES_TOK STRING_TOK
   15                | COLON_TOK CVC_COMMAND_TOK STRING_TOK
   16                | annotation

   17 logic_name: SYM_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   18           | SYM_TOK

   19 status: SAT_TOK
   20       | UNSAT_TOK
   21       | UNKNOWN_TOK

   22 sort_symbs: sort_symb
   23           | sort_symbs sort_symb

   24 fun_symb_decls: fun_symb_decl
   25               | fun_symb_decls fun_symb_decl

   26 fun_symb_decl: LPAREN_TOK fun_sig annotations RPAREN_TOK
   27              | LPAREN_TOK fun_sig RPAREN_TOK

   28 fun_sig: fun_symb sort_symbs

   29 pred_symb_decls: pred_symb_decl
   30                | pred_symb_decls pred_symb_decl

   31 pred_symb_decl: LPAREN_TOK pred_sig annotations RPAREN_TOK
   32               | LPAREN_TOK pred_sig RPAREN_TOK

   33 pred_sig: pred_symb sort_symbs
   34         | pred_symb

   35 an_formulas: an_formula
   36            | an_formulas an_formula

   37 an_formula: an_atom
   38           | LPAREN_TOK connective an_formulas annotations RPAREN_TOK
   39           | LPAREN_TOK connective an_formulas RPAREN_TOK
   40           | LPAREN_TOK quant_symb quant_vars an_formula patterns_annotations RPAREN_TOK
   41           | LPAREN_TOK quant_symb quant_vars an_formula RPAREN_TOK
   42           | LPAREN_TOK LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_formula annotations RPAREN_TOK
   43           | LPAREN_TOK LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_formula RPAREN_TOK
   44           | LPAREN_TOK FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_formula annotations RPAREN_TOK
   45           | LPAREN_TOK FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_formula RPAREN_TOK

   46 patterns_annotations: pattern
   47                     | annotation
   48                     | patterns_annotations pattern
   49                     | patterns_annotations annotation

   50 pattern: PAT_TOK LCURBRACK_TOK an_exprs RCURBRACK_TOK

   51 quant_vars: quant_var
   52           | quant_vars quant_var

   53 quant_var: LPAREN_TOK var sort_symb RPAREN_TOK

   54 quant_symb: EXISTS_TOK
   55           | FORALL_TOK

   56 connective: NOT_TOK
   57           | IMPLIES_TOK
   58           | IF_THEN_ELSE_TOK
   59           | AND_TOK
   60           | OR_TOK
   61           | XOR_TOK
   62           | IFF_TOK

   63 an_atom: prop_atom
   64        | LPAREN_TOK prop_atom annotations RPAREN_TOK
   65        | LPAREN_TOK pred_symb an_terms annotations RPAREN_TOK
   66        | LPAREN_TOK pred_symb an_terms RPAREN_TOK
   67        | LPAREN_TOK DISTINCT_TOK an_terms annotations RPAREN_TOK
   68        | LPAREN_TOK DISTINCT_TOK an_terms RPAREN_TOK

   69 prop_atom: TRUE_TOK
   70          | FALSE_TOK
   71          | fvar
   72          | pred_symb

   73 an_terms: an_term
   74         | an_terms an_term

   75 an_term: basic_term
   76        | LPAREN_TOK basic_term annotations RPAREN_TOK
   77        | LPAREN_TOK fun_symb an_terms annotations RPAREN_TOK
   78        | LPAREN_TOK fun_symb an_terms RPAREN_TOK
   79        | LPAREN_TOK ITE_TOK an_formula an_term an_term annotations RPAREN_TOK
   80        | LPAREN_TOK ITE_TOK an_formula an_term an_term RPAREN_TOK
   81        | LPAREN_TOK LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_term annotations RPAREN_TOK
   82        | LPAREN_TOK LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_term RPAREN_TOK
   83        | LPAREN_TOK FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_term annotations RPAREN_TOK
   84        | LPAREN_TOK FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_term RPAREN_TOK

   85 basic_term: var
   86           | fun_symb

   87 annotations: annotation
   88            | annotations annotation

   89 annotation: attribute
   90           | attribute user_value

   91 user_value: USER_VAL_TOK

   92 sort_symb: SYM_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   93          | SYM_TOK LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK
   94          | SYM_TOK

   95 pred_symb: SYM_TOK
   96          | AR_SYMB

   97 fun_symb: SYM_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   98         | SYM_TOK LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK
   99         | SYM_TOK
  100         | AR_SYMB
  101         | NUMERAL_TOK

  102 attribute: COLON_TOK SYM_TOK

  103 var: QUESTION_TOK SYM_TOK

  104 fvar: DOLLAR_TOK SYM_TOK

  105 an_exprs: an_expr
  106         | an_exprs an_expr

  107 an_expr: var
  108        | fvar
  109        | LPAREN_TOK fun_pred_symb an_terms annotations RPAREN_TOK
  110        | LPAREN_TOK fun_pred_symb an_terms RPAREN_TOK
  111        | LPAREN_TOK LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_expr annotations RPAREN_TOK
  112        | LPAREN_TOK LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_expr RPAREN_TOK
  113        | LPAREN_TOK FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_expr annotations RPAREN_TOK
  114        | LPAREN_TOK FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_expr RPAREN_TOK

  115 fun_pred_symb: SYM_TOK LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
  116              | SYM_TOK LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK
  117              | SYM_TOK
  118              | AR_SYMB
  119              | NUMERAL_TOK


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMERAL_TOK (258) 17 92 93 97 98 101 115 116 119
SYM_TOK (259) 4 17 18 92 93 94 95 97 98 99 102 103 104 115 116 117
STRING_TOK (260) 14 15
AR_SYMB (261) 96 100 118
USER_VAL_TOK (262) 91
TRUE_TOK (263) 69
FALSE_TOK (264) 70
ITE_TOK (265) 79 80
NOT_TOK (266) 56
IMPLIES_TOK (267) 57
IF_THEN_ELSE_TOK (268) 58
AND_TOK (269) 59
OR_TOK (270) 60
XOR_TOK (271) 61
IFF_TOK (272) 62
EXISTS_TOK (273) 54
FORALL_TOK (274) 55
LET_TOK (275) 42 43 81 82 111 112
FLET_TOK (276) 44 45 83 84 113 114
NOTES_TOK (277) 14
CVC_COMMAND_TOK (278) 15
LOGIC_TOK (279) 10
COLON_TOK (280) 7 8 9 10 11 12 13 14 15 93 98 102 116
LBRACKET_TOK (281) 17 92 93 97 98 115 116
RBRACKET_TOK (282) 17 92 93 97 98 115 116
LCURBRACK_TOK (283) 50
RCURBRACK_TOK (284) 50
LPAREN_TOK (285) 2 11 12 13 26 27 31 32 38 39 40 41 42 43 44 45 53
    64 65 66 67 68 76 77 78 79 80 81 82 83 84 109 110 111 112 113 114
RPAREN_TOK (286) 2 11 12 13 26 27 31 32 38 39 40 41 42 43 44 45 53
    64 65 66 67 68 76 77 78 79 80 81 82 83 84 109 110 111 112 113 114
SAT_TOK (287) 19
UNSAT_TOK (288) 20
UNKNOWN_TOK (289) 21
ASSUMPTION_TOK (290) 7
FORMULA_TOK (291) 8
STATUS_TOK (292) 9
BENCHMARK_TOK (293) 2
EXTRASORTS_TOK (294) 11
EXTRAFUNS_TOK (295) 12
EXTRAPREDS_TOK (296) 13
DOLLAR_TOK (297) 104
QUESTION_TOK (298) 103
DISTINCT_TOK (299) 67 68
EOF_TOK (300) 3
PAT_TOK (301) 50


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
cmd (48)
    on left: 1, on right: 0
benchmark (49)
    on left: 2 3, on right: 1
bench_name (50)
    on left: 4, on right: 2
bench_attributes (51)
    on left: 5 6, on right: 2 6
bench_attribute (52)
    on left: 7 8 9 10 11 12 13 14 15 16, on right: 5 6
logic_name (53)
    on left: 17 18, on right: 10
status (54)
    on left: 19 20 21, on right: 9
sort_symbs (55)
    on left: 22 23, on right: 11 23 28 33
fun_symb_decls (56)
    on left: 24 25, on right: 12 25
fun_symb_decl (57)
    on left: 26 27, on right: 24 25
fun_sig (58)
    on left: 28, on right: 26 27
pred_symb_decls (59)
    on left: 29 30, on right: 13 30
pred_symb_decl (60)
    on left: 31 32, on right: 29 30
pred_sig (61)
    on left: 33 34, on right: 31 32
an_formulas (62)
    on left: 35 36, on right: 36 38 39
an_formula (63)
    on left: 37 38 39 40 41 42 43 44 45, on right: 7 8 35 36 40 41
    42 43 44 45 79 80 83 84 113 114
patterns_annotations (64)
    on left: 46 47 48 49, on right: 40 48 49
pattern (65)
    on left: 50, on right: 46 48
quant_vars (66)
    on left: 51 52, on right: 40 41 52
quant_var (67)
    on left: 53, on right: 51 52
quant_symb (68)
    on left: 54 55, on right: 40 41
connective (69)
    on left: 56 57 58 59 60 61 62, on right: 38 39
an_atom (70)
    on left: 63 64 65 66 67 68, on right: 37
prop_atom (71)
    on left: 69 70 71 72, on right: 63 64
an_terms (72)
    on left: 73 74, on right: 65 66 67 68 74 77 78 109 110
an_term (73)
    on left: 75 76 77 78 79 80 81 82 83 84, on right: 42 43 73 74 79
    80 81 82 83 84 111 112
basic_term (74)
    on left: 85 86, on right: 75 76
annotations (75)
    on left: 87 88, on right: 26 31 38 42 44 64 65 67 76 77 79 81 83
    88 109 111 113
annotation (76)
    on left: 89 90, on right: 16 47 49 87 88
user_value (77)
    on left: 91, on right: 90
sort_symb (78)
    on left: 92 93 94, on right: 22 23 53
pred_symb (79)
    on left: 95 96, on right: 33 34 65 66 72
fun_symb (80)
    on left: 97 98 99 100 101, on right: 28 77 78 86
attribute (81)
    on left: 102, on right: 89 90
var (82)
    on left: 103, on right: 42 43 53 81 82 85 107 111 112
fvar (83)
    on left: 104, on right: 44 45 71 83 84 108 113 114
an_exprs (84)
    on left: 105 106, on right: 50 106
an_expr (85)
    on left: 107 108 109 110 111 112 113 114, on right: 105 106 111
    112 113 114
fun_pred_symb (86)
    on left: 115 116 117 118 119, on right: 109 110


state 0

    0 $accept: . cmd $end

    LPAREN_TOK  shift, and go to state 1
    EOF_TOK     shift, and go to state 2

    cmd        go to state 3
    benchmark  go to state 4


state 1

    2 benchmark: LPAREN_TOK . BENCHMARK_TOK bench_name bench_attributes RPAREN_TOK

    BENCHMARK_TOK  shift, and go to state 5


state 2

    3 benchmark: EOF_TOK .

    $default  reduce using rule 3 (benchmark)


state 3

    0 $accept: cmd . $end

    $end  shift, and go to state 6


state 4

    1 cmd: benchmark .

    $default  reduce using rule 1 (cmd)


state 5

    2 benchmark: LPAREN_TOK BENCHMARK_TOK . bench_name bench_attributes RPAREN_TOK

    SYM_TOK  shift, and go to state 7

    bench_name  go to state 8


state 6

    0 $accept: cmd $end .

    $default  accept


state 7

    4 bench_name: SYM_TOK .

    $default  reduce using rule 4 (bench_name)


state 8

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name . bench_attributes RPAREN_TOK

    COLON_TOK  shift, and go to state 9

    bench_attributes  go to state 10
    bench_attribute   go to state 11
    annotation        go to state 12
    attribute         go to state 13


state 9

    7 bench_attribute: COLON_TOK . ASSUMPTION_TOK an_formula
    8                | COLON_TOK . FORMULA_TOK an_formula
    9                | COLON_TOK . STATUS_TOK status
   10                | COLON_TOK . LOGIC_TOK logic_name
   11                | COLON_TOK . EXTRASORTS_TOK LPAREN_TOK sort_symbs RPAREN_TOK
   12                | COLON_TOK . EXTRAFUNS_TOK LPAREN_TOK fun_symb_decls RPAREN_TOK
   13                | COLON_TOK . EXTRAPREDS_TOK LPAREN_TOK pred_symb_decls RPAREN_TOK
   14                | COLON_TOK . NOTES_TOK STRING_TOK
   15                | COLON_TOK . CVC_COMMAND_TOK STRING_TOK
  102 attribute: COLON_TOK . SYM_TOK

    SYM_TOK          shift, and go to state 14
    NOTES_TOK        shift, and go to state 15
    CVC_COMMAND_TOK  shift, and go to state 16
    LOGIC_TOK        shift, and go to state 17
    ASSUMPTION_TOK   shift, and go to state 18
    FORMULA_TOK      shift, and go to state 19
    STATUS_TOK       shift, and go to state 20
    EXTRASORTS_TOK   shift, and go to state 21
    EXTRAFUNS_TOK    shift, and go to state 22
    EXTRAPREDS_TOK   shift, and go to state 23


state 10

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name bench_attributes . RPAREN_TOK
    6 bench_attributes: bench_attributes . bench_attribute

    COLON_TOK   shift, and go to state 9
    RPAREN_TOK  shift, and go to state 24

    bench_attribute  go to state 25
    annotation       go to state 12
    attribute        go to state 13


state 11

    5 bench_attributes: bench_attribute .

    $default  reduce using rule 5 (bench_attributes)


state 12

   16 bench_attribute: annotation .

    $default  reduce using rule 16 (bench_attribute)


state 13

   89 annotation: attribute .
   90           | attribute . user_value

    USER_VAL_TOK  shift, and go to state 26

    $default  reduce using rule 89 (annotation)

    user_value  go to state 27


state 14

  102 attribute: COLON_TOK SYM_TOK .

    $default  reduce using rule 102 (attribute)


state 15

   14 bench_attribute: COLON_TOK NOTES_TOK . STRING_TOK

    STRING_TOK  shift, and go to state 28


state 16

   15 bench_attribute: COLON_TOK CVC_COMMAND_TOK . STRING_TOK

    STRING_TOK  shift, and go to state 29


state 17

   10 bench_attribute: COLON_TOK LOGIC_TOK . logic_name

    SYM_TOK  shift, and go to state 30

    logic_name  go to state 31


state 18

    7 bench_attribute: COLON_TOK ASSUMPTION_TOK . an_formula

    SYM_TOK     shift, and go to state 32
    AR_SYMB     shift, and go to state 33
    TRUE_TOK    shift, and go to state 34
    FALSE_TOK   shift, and go to state 35
    LPAREN_TOK  shift, and go to state 36
    DOLLAR_TOK  shift, and go to state 37

    an_formula  go to state 38
    an_atom     go to state 39
    prop_atom   go to state 40
    pred_symb   go to state 41
    fvar        go to state 42


state 19

    8 bench_attribute: COLON_TOK FORMULA_TOK . an_formula

    SYM_TOK     shift, and go to state 32
    AR_SYMB     shift, and go to state 33
    TRUE_TOK    shift, and go to state 34
    FALSE_TOK   shift, and go to state 35
    LPAREN_TOK  shift, and go to state 36
    DOLLAR_TOK  shift, and go to state 37

    an_formula  go to state 43
    an_atom     go to state 39
    prop_atom   go to state 40
    pred_symb   go to state 41
    fvar        go to state 42


state 20

    9 bench_attribute: COLON_TOK STATUS_TOK . status

    SAT_TOK      shift, and go to state 44
    UNSAT_TOK    shift, and go to state 45
    UNKNOWN_TOK  shift, and go to state 46

    status  go to state 47


state 21

   11 bench_attribute: COLON_TOK EXTRASORTS_TOK . LPAREN_TOK sort_symbs RPAREN_TOK

    LPAREN_TOK  shift, and go to state 48


state 22

   12 bench_attribute: COLON_TOK EXTRAFUNS_TOK . LPAREN_TOK fun_symb_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 49


state 23

   13 bench_attribute: COLON_TOK EXTRAPREDS_TOK . LPAREN_TOK pred_symb_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 50


state 24

    2 benchmark: LPAREN_TOK BENCHMARK_TOK bench_name bench_attributes RPAREN_TOK .

    $default  reduce using rule 2 (benchmark)


state 25

    6 bench_attributes: bench_attributes bench_attribute .

    $default  reduce using rule 6 (bench_attributes)


state 26

   91 user_value: USER_VAL_TOK .

    $default  reduce using rule 91 (user_value)


state 27

   90 annotation: attribute user_value .

    $default  reduce using rule 90 (annotation)


state 28

   14 bench_attribute: COLON_TOK NOTES_TOK STRING_TOK .

    $default  reduce using rule 14 (bench_attribute)


state 29

   15 bench_attribute: COLON_TOK CVC_COMMAND_TOK STRING_TOK .

    $default  reduce using rule 15 (bench_attribute)


state 30

   17 logic_name: SYM_TOK . LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   18           | SYM_TOK .

    LBRACKET_TOK  shift, and go to state 51

    $default  reduce using rule 18 (logic_name)


state 31

   10 bench_attribute: COLON_TOK LOGIC_TOK logic_name .

    $default  reduce using rule 10 (bench_attribute)


state 32

   95 pred_symb: SYM_TOK .

    $default  reduce using rule 95 (pred_symb)


state 33

   96 pred_symb: AR_SYMB .

    $default  reduce using rule 96 (pred_symb)


state 34

   69 prop_atom: TRUE_TOK .

    $default  reduce using rule 69 (prop_atom)


state 35

   70 prop_atom: FALSE_TOK .

    $default  reduce using rule 70 (prop_atom)


state 36

   38 an_formula: LPAREN_TOK . connective an_formulas annotations RPAREN_TOK
   39           | LPAREN_TOK . connective an_formulas RPAREN_TOK
   40           | LPAREN_TOK . quant_symb quant_vars an_formula patterns_annotations RPAREN_TOK
   41           | LPAREN_TOK . quant_symb quant_vars an_formula RPAREN_TOK
   42           | LPAREN_TOK . LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_formula annotations RPAREN_TOK
   43           | LPAREN_TOK . LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_formula RPAREN_TOK
   44           | LPAREN_TOK . FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_formula annotations RPAREN_TOK
   45           | LPAREN_TOK . FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_formula RPAREN_TOK
   64 an_atom: LPAREN_TOK . prop_atom annotations RPAREN_TOK
   65        | LPAREN_TOK . pred_symb an_terms annotations RPAREN_TOK
   66        | LPAREN_TOK . pred_symb an_terms RPAREN_TOK
   67        | LPAREN_TOK . DISTINCT_TOK an_terms annotations RPAREN_TOK
   68        | LPAREN_TOK . DISTINCT_TOK an_terms RPAREN_TOK

    SYM_TOK           shift, and go to state 32
    AR_SYMB           shift, and go to state 33
    TRUE_TOK          shift, and go to state 34
    FALSE_TOK         shift, and go to state 35
    NOT_TOK           shift, and go to state 52
    IMPLIES_TOK       shift, and go to state 53
    IF_THEN_ELSE_TOK  shift, and go to state 54
    AND_TOK           shift, and go to state 55
    OR_TOK            shift, and go to state 56
    XOR_TOK           shift, and go to state 57
    IFF_TOK           shift, and go to state 58
    EXISTS_TOK        shift, and go to state 59
    FORALL_TOK        shift, and go to state 60
    LET_TOK           shift, and go to state 61
    FLET_TOK          shift, and go to state 62
    DOLLAR_TOK        shift, and go to state 37
    DISTINCT_TOK      shift, and go to state 63

    quant_symb  go to state 64
    connective  go to state 65
    prop_atom   go to state 66
    pred_symb   go to state 67
    fvar        go to state 42


state 37

  104 fvar: DOLLAR_TOK . SYM_TOK

    SYM_TOK  shift, and go to state 68


state 38

    7 bench_attribute: COLON_TOK ASSUMPTION_TOK an_formula .

    $default  reduce using rule 7 (bench_attribute)


state 39

   37 an_formula: an_atom .

    $default  reduce using rule 37 (an_formula)


state 40

   63 an_atom: prop_atom .

    $default  reduce using rule 63 (an_atom)


state 41

   72 prop_atom: pred_symb .

    $default  reduce using rule 72 (prop_atom)


state 42

   71 prop_atom: fvar .

    $default  reduce using rule 71 (prop_atom)


state 43

    8 bench_attribute: COLON_TOK FORMULA_TOK an_formula .

    $default  reduce using rule 8 (bench_attribute)


state 44

   19 status: SAT_TOK .

    $default  reduce using rule 19 (status)


state 45

   20 status: UNSAT_TOK .

    $default  reduce using rule 20 (status)


state 46

   21 status: UNKNOWN_TOK .

    $default  reduce using rule 21 (status)


state 47

    9 bench_attribute: COLON_TOK STATUS_TOK status .

    $default  reduce using rule 9 (bench_attribute)


state 48

   11 bench_attribute: COLON_TOK EXTRASORTS_TOK LPAREN_TOK . sort_symbs RPAREN_TOK

    SYM_TOK  shift, and go to state 69

    sort_symbs  go to state 70
    sort_symb   go to state 71


state 49

   12 bench_attribute: COLON_TOK EXTRAFUNS_TOK LPAREN_TOK . fun_symb_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 72

    fun_symb_decls  go to state 73
    fun_symb_decl   go to state 74


state 50

   13 bench_attribute: COLON_TOK EXTRAPREDS_TOK LPAREN_TOK . pred_symb_decls RPAREN_TOK

    LPAREN_TOK  shift, and go to state 75

    pred_symb_decls  go to state 76
    pred_symb_decl   go to state 77


state 51

   17 logic_name: SYM_TOK LBRACKET_TOK . NUMERAL_TOK RBRACKET_TOK

    NUMERAL_TOK  shift, and go to state 78


state 52

   56 connective: NOT_TOK .

    $default  reduce using rule 56 (connective)


state 53

   57 connective: IMPLIES_TOK .

    $default  reduce using rule 57 (connective)


state 54

   58 connective: IF_THEN_ELSE_TOK .

    $default  reduce using rule 58 (connective)


state 55

   59 connective: AND_TOK .

    $default  reduce using rule 59 (connective)


state 56

   60 connective: OR_TOK .

    $default  reduce using rule 60 (connective)


state 57

   61 connective: XOR_TOK .

    $default  reduce using rule 61 (connective)


state 58

   62 connective: IFF_TOK .

    $default  reduce using rule 62 (connective)


state 59

   54 quant_symb: EXISTS_TOK .

    $default  reduce using rule 54 (quant_symb)


state 60

   55 quant_symb: FORALL_TOK .

    $default  reduce using rule 55 (quant_symb)


state 61

   42 an_formula: LPAREN_TOK LET_TOK . LPAREN_TOK var an_term RPAREN_TOK an_formula annotations RPAREN_TOK
   43           | LPAREN_TOK LET_TOK . LPAREN_TOK var an_term RPAREN_TOK an_formula RPAREN_TOK

    LPAREN_TOK  shift, and go to state 79


state 62

   44 an_formula: LPAREN_TOK FLET_TOK . LPAREN_TOK fvar an_formula RPAREN_TOK an_formula annotations RPAREN_TOK
   45           | LPAREN_TOK FLET_TOK . LPAREN_TOK fvar an_formula RPAREN_TOK an_formula RPAREN_TOK

    LPAREN_TOK  shift, and go to state 80


state 63

   67 an_atom: LPAREN_TOK DISTINCT_TOK . an_terms annotations RPAREN_TOK
   68        | LPAREN_TOK DISTINCT_TOK . an_terms RPAREN_TOK

    NUMERAL_TOK   shift, and go to state 81
    SYM_TOK       shift, and go to state 82
    AR_SYMB       shift, and go to state 83
    LPAREN_TOK    shift, and go to state 84
    QUESTION_TOK  shift, and go to state 85

    an_terms    go to state 86
    an_term     go to state 87
    basic_term  go to state 88
    fun_symb    go to state 89
    var         go to state 90


state 64

   40 an_formula: LPAREN_TOK quant_symb . quant_vars an_formula patterns_annotations RPAREN_TOK
   41           | LPAREN_TOK quant_symb . quant_vars an_formula RPAREN_TOK

    LPAREN_TOK  shift, and go to state 91

    quant_vars  go to state 92
    quant_var   go to state 93


state 65

   38 an_formula: LPAREN_TOK connective . an_formulas annotations RPAREN_TOK
   39           | LPAREN_TOK connective . an_formulas RPAREN_TOK

    SYM_TOK     shift, and go to state 32
    AR_SYMB     shift, and go to state 33
    TRUE_TOK    shift, and go to state 34
    FALSE_TOK   shift, and go to state 35
    LPAREN_TOK  shift, and go to state 36
    DOLLAR_TOK  shift, and go to state 37

    an_formulas  go to state 94
    an_formula   go to state 95
    an_atom      go to state 39
    prop_atom    go to state 40
    pred_symb    go to state 41
    fvar         go to state 42


state 66

   64 an_atom: LPAREN_TOK prop_atom . annotations RPAREN_TOK

    COLON_TOK  shift, and go to state 96

    annotations  go to state 97
    annotation   go to state 98
    attribute    go to state 13


state 67

   65 an_atom: LPAREN_TOK pred_symb . an_terms annotations RPAREN_TOK
   66        | LPAREN_TOK pred_symb . an_terms RPAREN_TOK
   72 prop_atom: pred_symb .

    NUMERAL_TOK   shift, and go to state 81
    SYM_TOK       shift, and go to state 82
    AR_SYMB       shift, and go to state 83
    LPAREN_TOK    shift, and go to state 84
    QUESTION_TOK  shift, and go to state 85

    $default  reduce using rule 72 (prop_atom)

    an_terms    go to state 99
    an_term     go to state 87
    basic_term  go to state 88
    fun_symb    go to state 89
    var         go to state 90


state 68

  104 fvar: DOLLAR_TOK SYM_TOK .

    $default  reduce using rule 104 (fvar)


state 69

   92 sort_symb: SYM_TOK . LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   93          | SYM_TOK . LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK
   94          | SYM_TOK .

    LBRACKET_TOK  shift, and go to state 100

    $default  reduce using rule 94 (sort_symb)


state 70

   11 bench_attribute: COLON_TOK EXTRASORTS_TOK LPAREN_TOK sort_symbs . RPAREN_TOK
   23 sort_symbs: sort_symbs . sort_symb

    SYM_TOK     shift, and go to state 69
    RPAREN_TOK  shift, and go to state 101

    sort_symb  go to state 102


state 71

   22 sort_symbs: sort_symb .

    $default  reduce using rule 22 (sort_symbs)


state 72

   26 fun_symb_decl: LPAREN_TOK . fun_sig annotations RPAREN_TOK
   27              | LPAREN_TOK . fun_sig RPAREN_TOK

    NUMERAL_TOK  shift, and go to state 81
    SYM_TOK      shift, and go to state 82
    AR_SYMB      shift, and go to state 83

    fun_sig   go to state 103
    fun_symb  go to state 104


state 73

   12 bench_attribute: COLON_TOK EXTRAFUNS_TOK LPAREN_TOK fun_symb_decls . RPAREN_TOK
   25 fun_symb_decls: fun_symb_decls . fun_symb_decl

    LPAREN_TOK  shift, and go to state 72
    RPAREN_TOK  shift, and go to state 105

    fun_symb_decl  go to state 106


state 74

   24 fun_symb_decls: fun_symb_decl .

    $default  reduce using rule 24 (fun_symb_decls)


state 75

   31 pred_symb_decl: LPAREN_TOK . pred_sig annotations RPAREN_TOK
   32               | LPAREN_TOK . pred_sig RPAREN_TOK

    SYM_TOK  shift, and go to state 32
    AR_SYMB  shift, and go to state 33

    pred_sig   go to state 107
    pred_symb  go to state 108


state 76

   13 bench_attribute: COLON_TOK EXTRAPREDS_TOK LPAREN_TOK pred_symb_decls . RPAREN_TOK
   30 pred_symb_decls: pred_symb_decls . pred_symb_decl

    LPAREN_TOK  shift, and go to state 75
    RPAREN_TOK  shift, and go to state 109

    pred_symb_decl  go to state 110


state 77

   29 pred_symb_decls: pred_symb_decl .

    $default  reduce using rule 29 (pred_symb_decls)


state 78

   17 logic_name: SYM_TOK LBRACKET_TOK NUMERAL_TOK . RBRACKET_TOK

    RBRACKET_TOK  shift, and go to state 111


state 79

   42 an_formula: LPAREN_TOK LET_TOK LPAREN_TOK . var an_term RPAREN_TOK an_formula annotations RPAREN_TOK
   43           | LPAREN_TOK LET_TOK LPAREN_TOK . var an_term RPAREN_TOK an_formula RPAREN_TOK

    QUESTION_TOK  shift, and go to state 85

    var  go to state 112


state 80

   44 an_formula: LPAREN_TOK FLET_TOK LPAREN_TOK . fvar an_formula RPAREN_TOK an_formula annotations RPAREN_TOK
   45           | LPAREN_TOK FLET_TOK LPAREN_TOK . fvar an_formula RPAREN_TOK an_formula RPAREN_TOK

    DOLLAR_TOK  shift, and go to state 37

    fvar  go to state 113


state 81

  101 fun_symb: NUMERAL_TOK .

    $default  reduce using rule 101 (fun_symb)


state 82

   97 fun_symb: SYM_TOK . LBRACKET_TOK NUMERAL_TOK RBRACKET_TOK
   98         | SYM_TOK . LBRACKET_TOK NUMERAL_TOK COLON_TOK NUMERAL_TOK RBRACKET_TOK
   99         | SYM_TOK .

    LBRACKET_TOK  shift, and go to state 114

    $default  reduce using rule 99 (fun_symb)


state 83

  100 fun_symb: AR_SYMB .

    $default  reduce using rule 100 (fun_symb)


state 84

   76 an_term: LPAREN_TOK . basic_term annotations RPAREN_TOK
   77        | LPAREN_TOK . fun_symb an_terms annotations RPAREN_TOK
   78        | LPAREN_TOK . fun_symb an_terms RPAREN_TOK
   79        | LPAREN_TOK . ITE_TOK an_formula an_term an_term annotations RPAREN_TOK
   80        | LPAREN_TOK . ITE_TOK an_formula an_term an_term RPAREN_TOK
   81        | LPAREN_TOK . LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_term annotations RPAREN_TOK
   82        | LPAREN_TOK . LET_TOK LPAREN_TOK var an_term RPAREN_TOK an_term RPAREN_TOK
   83        | LPAREN_TOK . FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_term annotations RPAREN_TOK
   84        | LPAREN_TOK . FLET_TOK LPAREN_TOK fvar an_formula RPAREN_TOK an_term RPAREN_TOK

    NUMERAL_TOK   shift, and go to state 81
    SYM_TOK       shift, and go to state 82
    AR_SYMB       shift, and go to state 83
    ITE_TOK       shift, and go to state 115
    LET_TOK       shift, and go to state 116
    FLET_TOK      shift, and go to state 117
    QUESTION_TOK  shift, and go to state 85

    basic_term  go to state 118
    fun_symb    go to state 119
    var         go to state 90


state 85

  103 var: QUESTION_TOK . SYM_TOK

    SYM_TOK  shift, and go to state 120


state 86

   67 an_atom: LPAREN_TOK DISTINCT_TOK an_terms . annotations RPAREN_TOK
   68        | LPAREN_TOK DISTINCT_TOK an_terms . RPAREN_TOK
   74 an_terms: an_terms . an_term

    NUMERAL_TOK   shift, and go to state 81
    SYM_TOK       shift, and go to state 82
    AR_SYMB       shift, and go to state 83
    COLON_TOK     shift, and go to state 96
    LPAREN_TOK    shift, and go to state 84
    RPAREN_TOK    shift, and go to state 121
    QUESTION_TOK  shift, and go to state 85
